--- a/src/App.scss
+++ b/src/App.scss
@@ -170,7 +170,7 @@ button {
     font-size: 24px;
   }
 
-  &.hover {
+  &.hoverable {
     padding: 8px;
 
     &:hover {
@@ -182,6 +182,12 @@ button {
     background: $elem-background;
     cursor: default;
   }
+}
+
+.imitateLink {
+  cursor: pointer;
+  color: blue;
+  text-decoration: underline;
 }
 
 .seperator {
@@ -205,7 +211,7 @@ button {
   line-height: 48px;
   position: relative;
 
-  i {
+  svg {
     font-size: 20px;
     position: absolute;
     left: 50%;
