--- a/src/App.scss
+++ b/src/App.scss
@@ -143,6 +143,7 @@ button {
     flex-direction: column;
     align-items: flex-start;
     overflow: hidden;
+    width: 100%;
 
     p {
       text-overflow: ellipsis;
