--- a/src/App.scss
+++ b/src/App.scss
@@ -316,7 +316,7 @@ button {
   align-items: center;
   justify-content: space-between;
 
-  .left {
+  .title {
     display: flex;
     align-items: center;
 
