--- a/src/App.css
+++ b/src/App.css
@@ -420,9 +420,13 @@ button {
   margin: 0 0 0 16px;
 }
 
-#infoBar i {
+#infoBar svg {
   font-size: 21px;
   cursor: pointer;
+}
+
+#infoBar.withMargin {
+  margin-bottom: 16px;
 }
 
 .bold {
@@ -660,5 +664,9 @@ button {
   text-align: center;
   border-radius: 8px;
   cursor: pointer;
+}
+
+.noMargin {
+  margin: 0 !important;
 }
 /*# sourceMappingURL=App.css.map */
