--- a/src/App.css
+++ b/src/App.css
@@ -45,10 +45,6 @@ body,
           justify-content: center;
 }
 
-.centerX.mobile {
-  height: 100%;
-}
-
 .centerY {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -60,10 +56,6 @@ body,
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-}
-
-.centerY.mobile {
-  height: 100%;
 }
 
 .center {
@@ -353,21 +345,10 @@ button {
           flex: 1;
 }
 
-#messagesBox.mobile {
-  width: calc(100vw - 128px);
-  max-width: 350px;
-}
-
 #messagesMenu {
   width: 240px;
   border-right: 1px solid #e5e5e5;
   padding-right: 16px;
-}
-
-#messagesMenu.mobile {
-  width: 100%;
-  border-right: none;
-  padding-right: 0;
 }
 
 #chatPanel {
@@ -404,14 +385,6 @@ button {
           justify-content: flex-end;
   overflow: hidden;
   margin-left: 16px;
-}
-
-#chatPanel.mobile {
-  width: auto;
-}
-
-#chatPanel.mobile #chatBottom {
-  margin-left: 0;
 }
 
 #messages {
@@ -695,5 +668,31 @@ button {
 
 .noMargin {
   margin: 0 !important;
+}
+
+@media screen and (max-width: 750px) {
+  :not(.popupBack) > .box {
+    padding: 16px;
+  }
+  .center > .centerX,
+  .center > .centerY {
+    height: 100%;
+  }
+  #messagesBox {
+    width: calc(100vw - 128px);
+    max-width: 350px;
+  }
+  #messagesMenu {
+    width: 100%;
+    border-right: none;
+    padding-right: 0;
+  }
+  #chatPanel {
+    width: auto;
+    height: 100%;
+  }
+  #chatBottom {
+    margin-left: 0 !important;
+  }
 }
 /*# sourceMappingURL=App.css.map */
