--- a/src/App.css
+++ b/src/App.css
@@ -679,7 +679,7 @@ button {
     height: 100%;
   }
   #messagesBox {
-    width: calc(100vw - 128px);
+    width: calc(100vw - 64px);
     max-width: 350px;
   }
   #messagesMenu {
@@ -693,6 +693,18 @@ button {
   }
   #chatBottom {
     margin-left: 0 !important;
+  }
+  .button {
+    padding: 12px 16px;
+  }
+  input[type="text"] {
+    padding: 12px;
+  }
+  .search .fa-search {
+    margin: 14px 0 0 16px;
+  }
+  #nickInput {
+    padding: 12px 16px;
   }
 }
 /*# sourceMappingURL=App.css.map */
