--- a/src/App.scss
+++ b/src/App.scss
@@ -566,7 +566,7 @@ button {
   }
 
   #messagesBox {
-    width: calc(100vw - 128px);
+    width: calc(100vw - 64px);
     max-width: 350px;
   }
 
@@ -583,5 +583,21 @@ button {
 
   #chatBottom {
     margin-left: 0 !important;
+  }
+
+  .button {
+    padding: 12px 16px;
+  }
+
+  input[type="text"] {
+    padding: 12px;
+  }
+
+  .search .fa-search {
+    margin: 14px 0 0 16px;
+  }
+
+  #nickInput {
+    padding: 12px 16px;
   }
 }
