scroll to bottom of chat by default

--- a/src/App.scss
+++ b/src/App.scss
@@ -317,6 +317,8 @@ button {
   padding-top: 8px;
   overflow-y: auto;
   overflow-x: hidden;
+  display: flex;
+  flex-direction: column-reverse;
 }
 
 #infoBar {
