--- a/src/App.css
+++ b/src/App.css
@@ -403,6 +403,13 @@ button {
   padding-top: 8px;
   overflow-y: auto;
   overflow-x: hidden;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: reverse;
+      -ms-flex-direction: column-reverse;
+          flex-direction: column-reverse;
 }
 
 #infoBar {
